--- a/src/env.yaml.example
+++ b/src/env.yaml.example
@@ -12,9 +12,9 @@ database:
   driver: mysql
   host: 127.0.0.1
   port: 3306
-  name: go_react
+  name: boilerplate
   user: root
-  password:
+  password: secret
   sslmode: disable
 
 redis:
